--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "standard",
     "lint:fix": "standard --fix",
     "test": "npm run lint && npm run test:unit",
-    "test:unit": "tap test/**/*.test.js"
+    "test:unit": "tap --100 test/**/*.test.js"
   },
   "repository": {
     "type": "git",
