fix: matchAll per node 10 LTS till april 2021

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "fastbench": "^1.0.1",
     "standard": "^16.0.3",
     "tap": "^14.11.0"
+  },
+  "dependencies": {
+    "string.prototype.matchall": "^4.0.4"
   }
 }
